<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:title="Movie"
        android:icon="@drawable/ic_movie" />
    <item
        android:id="@+id/navigation_tv"
        android:title="Tv Show"
        android:icon="@drawable/ic_tv" />
    <item
        android:id="@+id/navigation_favorite"
        android:title="Favorite"
        android:icon="@drawable/ic_favorite" />
</menu>